frontend/src/component/EmailVerification.css
#mainboxemailVerification {
    background-color: #565555b7;
    height: 100vh;
    width: 100%;
    position: fixed;
    z-index: 1200;
    bottom: 20px;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
}

#emailVerificationbox2 {
    background-color: #d0cece;
    height: 50%;
    width: 50%;
    border-radius: 20px;
    border: 2px solid #000;
}

#emailVerificationbox2 h3 {
    color: #000;
    text-align: center;
    font-size: 2rem;
    margin-top: 20px;
}

#emailVerificationbox2 p {
    text-align: center;
    font-size: 15px;
    margin-top: 10px;
    color: grey;
}

#inputboxemailVerification {
    width: 100%;
    margin: 0 auto;
    height: 50px;
    display: flex;
    align-items: center;
    justify-content: center;
    margin-top: 30px;
}

#inputboxemailVerification input {
    width: 80%;
    height: 80%;
    border: none;
    outline: none;
    padding-left: 10px;
    border-radius: 40px;
}

#emailVerificationbtn {
    width: 100%;
    height: 50px;
    display: flex;
    align-items: center;
    justify-content: center;
    margin-top: 30px;
}

#emailVerificationbtn button {
    width: 80%;
    height: 80%;
    border: none;
    outline: none;
    background-color: #000;
    color: #fff;
    font-size: 1.2rem;
    border-radius: 40px;
    user-select: none;
}

#emailVerificationbtn button:hover {
    background-color: #565555;
    cursor: pointer;
}

#erroemsg {
    color: red;
    text-align: center;
    font-size: 13px;
    margin-top: 10px;
}

